--- a/MPC/MPC_example/MPC_Example.ipynb
+++ b/MPC/MPC_example/MPC_Example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,13 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x865.598060978798\n",
+      "y1423.7636933758395\n",
       "Local search too narrow. Performing global search.\n",
       "Global search successfully found a better projection.\n",
       "q0:[865.598060978798, 1423.7636933758395, -0.6786788288239216, 9.30225337459255, 41.45]\n",
@@ -162,6 +164,8 @@
     "\n",
     "# robot initial state\n",
     "q0 = [scene.robot.x[first_ts], scene.robot.y[first_ts], scene.robot.θ[first_ts], scene.robot.v[first_ts], 0]\n",
+    "println(\"x\", scene.robot.x[first_ts])\n",
+    "println(\"y\", scene.robot.y[first_ts])\n",
     "q0[5] = find_best_s(q0, path_obj, enable_global_search=true)\n",
     "\n",
     "println(\"q0:\", q0)\n",
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
